Working teensy -> fpga write

--- a/code/fpga/dvl_tcl.html
+++ b/code/fpga/dvl_tcl.html
@@ -72,12 +72,35 @@ prj_run Export -impl impl_1
 
 
 
+<A name="pn240324205714"></A><B><U><big>pn240324205714</big></U></B>
+#Start recording tcl command: 3/24/2024 15:11:04
+#Project Location: Z:/github/dvl/code/fpga; Project name: dvl
+prj_open "Z:/github/dvl/code/fpga/dvl.rdf"
+prj_run PAR -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_add_source "Z:/github/dvl/code/fpga/pinout.pdc"
+prj_enable_source "Z:/github/dvl/code/fpga/pinout.pdc"
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+#Stop recording: 3/24/2024 20:57:14
+
+
+
 </PRE></DIV>
 
 <DIV id="toc" class="radiant"><span onmousemove="showTocList()">Contents</span>
 <UL id="toc_list">
 <LI><A href=#pn240321002702>pn240321002702</A></LI>
 <LI><A href=#pn240321073708>pn240321073708</A></LI>
+<LI><A href=#pn240324205714>pn240324205714</A></LI>
 </UL>
 </DIV>
 
