Small bug fix and add RW output

--- a/code/fpga/dvl_tcl.html
+++ b/code/fpga/dvl_tcl.html
@@ -224,6 +224,69 @@ prj_run Export -impl impl_1
 
 
 
+<A name="pn240328111927"></A><B><U><big>pn240328111927</big></U></B>
+#Start recording tcl command: 3/27/2024 02:59:46
+#Project Location: Z:/github/dvl/code/fpga; Project name: dvl
+prj_open "Z:/github/dvl/code/fpga/dvl.rdf"
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_add_source "Z:/github/dvl/code/fpga/source/impl_1/i2c_slave.v"
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_run Export -impl impl_1
+prj_add_source "Z:/github/dvl/code/fpga/source/impl_1/i2c_peripheral_clk.sv"
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_add_source "Z:/github/dvl/code/fpga/sim/sim.spf"
+prj_add_source "Z:/github/dvl/code/fpga/sim/sim.spf"
+prj_add_source "Z:/github/dvl/code/fpga/sim/sim.spf"
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_remove_source "Z:/github/dvl/code/fpga/source/impl_1/i2c_slave.v"
+prj_run PAR -impl impl_1
+prj_run Export -impl impl_1
+prj_run Map -impl impl_1 -task MapTrace
+#Stop recording: 3/28/2024 11:19:27
+
+
+
 </PRE></DIV>
 
 <DIV id="toc" class="radiant"><span onmousemove="showTocList()">Contents</span>
@@ -232,6 +295,7 @@ prj_run Export -impl impl_1
 <LI><A href=#pn240321073708>pn240321073708</A></LI>
 <LI><A href=#pn240324205714>pn240324205714</A></LI>
 <LI><A href=#pn240327202213>pn240327202213</A></LI>
+<LI><A href=#pn240328111927>pn240328111927</A></LI>
 </UL>
 </DIV>
 
